@@ -1,3 +1,9 @@
+2010-04-13 Borut Razem <borut.razem AT siol.net>
+
+	* emu/rrgb/csock.c, emu/rrgb/z80.c, emu/rrgb/debugger.c,
+	  emu/rrgb/main.c, emu/rrgb/disgb.c:
+	  fixed SunPro C warnings
+
 2010-04-08 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc-extra/emu/rrz80/disasm.cc: removed comma after the last enum
